适配新版本 Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,13 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
-mainClassName = 'com.github.ClarkGuan.gojni.Main'
+application {
+    mainClass = 'com.github.ClarkGuan.gojni.Main'
+}
 
 distributions {
     main {
-        baseName = 'gojni'
+        distributionBaseName = 'gojni'
     }
 }
 
@@ -20,11 +22,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    implementation 'commons-cli:commons-cli:1.5.0'
     // https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core
-    compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.15.0'
+    implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.35.0'
     // https://mvnrepository.com/artifact/org.antlr/ST4
-    compile group: 'org.antlr', name: 'ST4', version: '4.0.8'
+    implementation 'org.antlr:ST4:4.3.4'
 }
